2006-11-17 16:32  tag qopqdp0-7-4

2006-11-17 16:32  osborn

	* include/Makefile.am: Added generic_vD.h to Makefile.am.

2006-11-17 16:26  osborn

	* NEWS, configure, configure.ac, examples/asqtad_test.c,
	  include/generic_D.h, include/generic_V.h, include/generic_vD.h,
	  include/qop_internal_p.h, lib/Makefile.am, lib/asqtad_invert_p.c,
	  lib/dw_invert_p.c, lib/invert_cg_p.c, lib/invert_cg_vD_d.c,
	  lib/invert_cg_vD_f.c: Added true multimass and 2 source inverter
	  for asqtad.

2006-11-15 12:52  osborn

	* NEWS, configure, configure.ac, examples/asqtad_test.c,
	  examples/test_common.c, examples/wilson_invert_bench.c,
	  examples/wilson_test.c, lib/asqtad_invert_p.c,
	  lib/wilson_invert_p.c: Fixed memory leak in asqtad inverter.

2006-10-30 18:02  tag qopqdp0-7-2

2006-10-30 18:02  osborn

	* NEWS, configure, configure.ac, include/qop.h, include/qop_qdp.h,
	  lib/asqtad_invert_p.c, lib/symanzik_1loop_gauge_force_p.c:
	  Changed meaning of eps parameter to gauge force.  Added gauge
	  loading functions.

2006-09-26 19:23  tag qopqdp0-7-1

2006-09-26 19:23  osborn

	* lib/Makefile.am: Fix Makefile.am.

2006-09-26 19:16  osborn

	* examples/imp_gauge_force_bench.c: Changed FF to GF in output.

2006-09-26 19:12  osborn

	* examples/imp_gauge_force_bench.c,
	  lib/symanzik_1loop_gauge_force_d.c,
	  lib/symanzik_1loop_gauge_force_f.c,
	  lib/symanzik_1loop_gauge_force_p.c: Really add files.

2006-09-26 19:09  osborn

	* AUTHORS, NEWS, configure, configure.ac, examples/Makefile.am,
	  include/qop.h, lib/Makefile.am, lib/asqtad_force_p.c: Fixed int
	  overflow in asqtad force flops calculation.  Added gauge force
	  code.

2006-06-25 09:32  tag qopqdp0-7-0

2006-06-25 09:32  osborn

	* NEWS, aclocal.m4, configure, configure.ac,
	  examples/asqtad_force_bench.c, examples/asqtad_invert_bench.c,
	  examples/asqtad_test.c, examples/dw_invert_bench.c,
	  examples/wilson_invert_bench.c, examples/wilson_test.c,
	  include/qop.h, include/qop_internal.h, include/qop_qdp.h,