@@ -1,4 +1,31 @@
 <table border=0>
+<tr>
+<td colspan=4 bgcolor=lightblue><b>2006-11-21</b>
+<tr bgcolor=lightgrey>
+<td>23:54
+<td>osborn
+<td>
+NEWS
+1.7<br>
+configure
+1.17<br>
+configure.ac
+1.18<br>
+examples/asqtad_invert_bench.c
+1.8<br>
+include/generic_D.h
+1.3<br>
+include/generic_V.h
+1.3<br>
+include/generic_vD.h
+1.2<br>
+lib/asqtad_invert_p.c
+1.9<br>
+lib/invert_cg_p.c
+1.4<br>
+<td>Fixed multimass inverter.  Improved asqtad link loading.
+</tr>
+
 <tr bgcolor=lightgreen>
 <td>21:32
 <td><td>
@@ -6,7 +33,7 @@
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-17</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:32
 <td>osborn
 <td>
@@ -15,7 +42,7 @@ include/Makefile.am
 <td>Added generic_vD.h to Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:26
 <td>osborn
 <td>
@@ -52,7 +79,7 @@ lib/invert_cg_vD_f.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-11-15</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>17:52
 <td>osborn
 <td>
@@ -84,7 +111,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-10-30</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:02
 <td>osborn
 <td>
@@ -113,7 +140,7 @@ Added gauge loading functions.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-09-26</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:23
 <td>osborn
 <td>
@@ -122,7 +149,7 @@ lib/Makefile.am
 <td>Fix Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:16
 <td>osborn
 <td>
@@ -131,7 +158,7 @@ examples/imp_gauge_force_bench.c
 <td>Changed FF to GF in output.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:12
 <td>osborn
 <td>
@@ -146,7 +173,7 @@ lib/symanzik_1loop_gauge_force_p.c
 <td>Really add files.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:09
 <td>osborn
 <td>
@@ -177,7 +204,7 @@ Added gauge force code.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-06-25</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>13:32
 <td>osborn
 <td>
@@ -229,7 +256,7 @@ Must use QLA &gt;= 1.6.0 now in order to agree with Chroma.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-05-04</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>20:12
 <td>osborn
 <td>
@@ -238,7 +265,7 @@ examples/test_common.h
 <td>Include qmp.h in examples.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>20:09
 <td>osborn
 <td>
@@ -259,7 +286,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-16</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>03:01
 <td>osborn
 <td>
@@ -280,7 +307,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-14</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>20:21
 <td>osborn
 <td>
@@ -297,7 +324,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-04</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:44
 <td>osborn
 <td>
@@ -310,7 +337,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-03-14</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>19:32
 <td>osborn
 <td>
@@ -321,7 +348,7 @@ configure.ac
 <td>Added CC, ect. to DISTCHECK_CONFIGURE_FLAGS.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:51
 <td>osborn
 <td>
@@ -330,7 +357,7 @@ include/Makefile.am
 <td>Added generic headers to Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:48
 <td>osborn
 <td>
@@ -347,7 +374,7 @@ examples/wilson_invert_bench.c
 <td>Allow selection of style in benchmarks.  Update version.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>00:54
 <td>osborn
 <td>
@@ -412,7 +439,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-09</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:05
 <td>osborn
 <td>
@@ -425,7 +452,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-03</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:23
 <td>osborn
 <td>
@@ -436,7 +463,7 @@ lib/wilson_invert_f.c
 <td>Added missing files.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:21
 <td>osborn
 <td>
@@ -476,7 +503,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-01-13</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>22:12
 <td>osborn
 <td>
@@ -485,7 +512,7 @@ lib/Makefile.am
 <td>Fixed lib Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:55
 <td>osborn
 <td>
@@ -530,7 +557,7 @@ lib/wilsonp.c
 <td>Moved many files around.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:50
 <td>osborn
 <td>
@@ -561,7 +588,7 @@ lib/common.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-29</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:17
 <td>osborn
 <td>
@@ -600,7 +627,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-16</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:47
 <td>osborn
 <td>
@@ -611,7 +638,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-15</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>19:23
 <td>osborn
 <td>
@@ -632,7 +659,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-12</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>06:16
 <td>osborn
 <td>
@@ -643,7 +670,7 @@ lib/wilsonp.c
 <td>Changed Wilson inverter code.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>05:41
 <td>osborn
 <td>
@@ -680,7 +707,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-08</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>01:03
 <td>osborn
 <td>
@@ -703,7 +730,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-01</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>02:02
 <td>osborn
 <td>
@@ -714,7 +741,7 @@ examples/asqtad_test.c
 <td>Small change in test, reran aotoreconf.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>01:51
 <td>osborn
 <td>
@@ -731,7 +758,7 @@ lib/asqtadp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-29</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:26
 <td>osborn
 <td>
@@ -742,7 +769,7 @@ include/qop.h
 <td>Fixed flop bug.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>22:58
 <td>osborn
 <td>
@@ -751,7 +778,7 @@ examples/asqtad_test.c
 <td>Small change to test program output.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>22:52
 <td>osborn
 <td>
@@ -766,7 +793,7 @@ lib/asqtadp.c
 <td>Added new style of dslash and optimization options.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>19:24
 <td>osborn
 <td>
@@ -777,7 +804,7 @@ lib/asqtadp.c
 <td>More changes to test program.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:34
 <td>osborn
 <td>
@@ -786,7 +813,7 @@ examples/asqtad_test.c
 <td>Changes in test program.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>17:36
 <td>osborn
 <td>
@@ -801,7 +828,7 @@ examples/asqtad_test.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-27</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>03:26
 <td>osborn
 <td>
